# quickjs-cmake

lib/: .gitignore  CMakeLists.txt  README.md
test/: CMakeLists.txt  fib.c  main.c
